login flow design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#FF8C8C</color>
+    <color name="background_text_field">#F7F8F9</color>
+    <color name="stroke_text_field">#E8ECF4</color>
+    <color name="stroke_button">#E8ECF4</color>
 </resources>
