--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,9 @@
     <style name="Base.Theme._25B11345BYogis" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- default font for all TextViews -->
+        <item name="android:fontFamily">@font/urbanist</item>
+        <!-- for Material Components -->
+        <item name="fontFamily">@font/urbanist</item>
     </style>
 </resources>
