update login flow design

--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -2,16 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_forgot_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- Back arrow -->
-
-    <!-- Title -->
+    <!-- at exactly 60% down the screen -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.60"
+        android:orientation="horizontal"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_fp_back"
@@ -24,15 +27,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Subtitle -->
-
     <TextView
         android:id="@+id/tv_fp_title"
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/urbanist_bold"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textColor="#212121"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/urbanist"
-        android:text="Don't worry! It occurs. Please enter the email address linked with your account."
+        android:text="@string/forgot_password_subtitle"
         android:textColor="#757575"
         android:textSize="14sp"
         android:lineSpacingExtra="4dp"
@@ -55,14 +56,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Email field -->
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Yogis.TextField.Outlined"
         android:id="@+id/til_fp_email"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:hint="Enter your email"
+        android:hint="@string/enter_your_email"
         app:layout_constraintTop_toBottomOf="@id/tv_fp_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -74,22 +74,17 @@
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Send Code button -->
-
-    <!-- Footer: “Remember Password? Login” -->
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_fp_send_code"
         style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
-        android:text="Send Code"
+        android:text="@string/send_code"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/til_fp_email" />
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"/>
 
     <TextView
         android:id="@+id/tv_fp_remember"
@@ -97,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/urbanist"
-        android:text="Remember Password?"
+        android:text="@string/remember_password"
         android:textColor="#212121"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@id/tv_fp_login"
@@ -113,7 +108,7 @@
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/urbanist_bold"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/primary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
