--- a/app/src/main/res/layout/create_new_password.xml
+++ b/app/src/main/res/layout/create_new_password.xml
@@ -8,9 +8,14 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- Back arrow -->
+    <!-- at exactly 60% down the screen -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.60"
+        android:orientation="horizontal"/>
 
-    <!-- Title -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_cp_back"
         style="@style/Widget.Yogis.Button.Back"
@@ -99,10 +104,9 @@
         android:id="@+id/btn_cp_reset"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:text="@string/reset_password"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
