--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +8,14 @@
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/white">
+
+    <!-- at exactly 60% down the screen -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.60"
+        android:orientation="horizontal"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/iv_back"
@@ -89,13 +98,12 @@
         style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:text="@string/login"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button" />
 
     <TextView
         android:id="@+id/tv_no_account"
