--- a/app/src/main/res/layout/otp_verification.xml
+++ b/app/src/main/res/layout/otp_verification.xml
@@ -8,6 +8,14 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
+    <!-- at exactly 60% down the screen -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.60"
+        android:orientation="horizontal"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_otp_back"
         style="@style/Widget.Yogis.Button.Back"
@@ -158,10 +166,9 @@
         android:id="@+id/btn_verify"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:text="@string/verify"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/til_code1"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
