--- a/app/src/main/res/layout/password_changed.xml
+++ b/app/src/main/res/layout/password_changed.xml
@@ -9,6 +9,14 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
+    <!-- at exactly 60% down the screen -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.60"
+        android:orientation="horizontal"/>
+
     <ImageView
         android:id="@+id/iv_success"
         android:layout_width="104dp"
@@ -56,10 +64,9 @@
         android:id="@+id/btn_pc_login"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:text="@string/login"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/tv_pc_subtitle"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
