--- a/app/src/main/res/layout/sign_up_prof_info.xml
+++ b/app/src/main/res/layout/sign_up_prof_info.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fragment_login"
+    android:id="@+id/fragment_sign_up_professional"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- at exactly 60% down the screen -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.60"
+        app:layout_constraintGuide_percent="0.85"
         android:orientation="horizontal"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/iv_back"
+        android:id="@+id/btn_professional_back"
         style="@style/Widget.Yogis.Button.Back"
         android:layout_width="40dp"
         android:layout_height="50dp"
@@ -29,107 +27,93 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_login_title"
-        android:layout_width="319dp"
-        android:layout_height="72dp"
+        android:id="@+id/tv_professional_title"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/urbanist_bold"
-        android:text="@string/welcome_back_glad_to_see_you_again"
+        android:text="@string/professional_information"
         android:textColor="#212121"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintTop_toBottomOf="@id/btn_professional_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_back" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Yogis.TextField.Outlined"
-        android:id="@+id/til_email"
+        android:id="@+id/til_yoga"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_professional_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_yoga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_your_email"
-            android:inputType="textEmailAddress"/>
+            android:hint="@string/yoga"
+            android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Yogis.TextField.Outlined"
-        android:id="@+id/til_password"
+        android:id="@+id/til_level"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/til_email"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/til_yoga"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:endIconMode="password_toggle"
-        app:endIconDrawable="@drawable/ic_eye">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_password"
+            android:id="@+id/et_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_your_password"
-            android:inputType="textEmailAddress"/>
+            android:hint="@string/level"
+            android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tv_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/urbanist"
-        android:text="@string/forgot_password"
-        android:textColor="#757575"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/til_password"
-        app:layout_constraintEnd_toEndOf="@id/til_password"/>
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_professional_register"
         style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:text="@string/login"
+        android:text="@string/register"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_action_button" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_no_account"
+        android:id="@+id/tv_professional_footer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
-        android:text="@string/don_t_have_an_account"
+        android:text="@string/already_have_an_account"
         android:textColor="#212121"
         android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@id/tv_register_now"
+        app:layout_constraintEnd_toStartOf="@+id/tv_professional_login"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@id/btn_professional_register" />
 
     <TextView
-        android:id="@+id/tv_register_now"
+        android:id="@+id/tv_professional_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/register_now"
-        android:fontFamily="@font/urbanist_bold"
-        android:textColor="@color/primary"
-        android:textSize="14sp"
+        android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintStart_toEndOf="@id/tv_no_account"
+        android:fontFamily="@font/urbanist_bold"
+        android:text="@string/login"
+        android:textColor="@color/primary"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@id/tv_no_account"/>
+        app:layout_constraintStart_toEndOf="@id/tv_professional_footer"
+        app:layout_constraintTop_toBottomOf="@id/btn_professional_register" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
