add profile and edit profile layouts, change password dialog, and scrollbar styles

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background_text_field">#F7F8F9</color>
     <color name="stroke_text_field">#E8ECF4</color>
     <color name="stroke_button">#E8ECF4</color>
+    <color name="overlay_background">#808A8A8A</color>
 </resources>
