--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -2,19 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/white">
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_back"
-        style="@style/Widget.Yogis.Button.Back"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:icon="@drawable/ic_arrow_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_photo"
@@ -22,6 +14,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_temp_image"
+        android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/ShapeAppearance.Yogis.Circle"
         app:layout_constraintTop_toBottomOf="@id/btn_back"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="Edit Photo"
+        android:text="@string/edit_photo"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
         android:textColor="@color/primary"
@@ -46,6 +39,17 @@
         android:layout_height="wrap_content"
         app:layout_constraintGuide_percent="0.78"
         android:orientation="horizontal"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_back"
+        style="@style/Widget.Yogis.Button.Back"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        app:icon="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_region"
@@ -61,7 +65,8 @@
         app:layout_constraintTop_toBottomOf="@id/tv_edit_photo"
         app:layout_constraintBottom_toTopOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,7 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:hint="John Smith"
+                android:hint="@string/john_smith"
                 app:helperTextEnabled="true"
                 app:helperText="User Name">
 
@@ -89,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="example@gmail.com"
+                android:hint="@string/example_gmail_com"
                 app:helperTextEnabled="true"
                 app:helperText="Email Address">
                 <com.google.android.material.textfield.TextInputEditText
@@ -103,7 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="+972 547628936"
+                android:hint="@string/_972_547628936"
                 app:helperTextEnabled="true"
                 app:helperText="Phone Number">
                 <com.google.android.material.textfield.TextInputEditText
@@ -117,7 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="12 Jan 1995"
+                android:hint="@string/_12_jan_1995"
                 app:helperTextEnabled="true"
                 app:helperText="Date of Birth">
                 <com.google.android.material.textfield.TextInputEditText
@@ -131,9 +136,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="Ashtanga"
+                android:hint="@string/ashtanga"
                 app:helperTextEnabled="true"
-                app:helperText="Yoga Style">
+                app:helperText="Yoga Style"
+                tools:ignore="HardcodedText">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -145,7 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="2 Years"
+                android:hint="@string/_2_years"
                 app:helperTextEnabled="true"
                 app:helperText="Experience Level">
                 <com.google.android.material.textfield.TextInputEditText
@@ -163,7 +169,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
-        android:text="Change Password"
+        android:text="@string/change_password"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +181,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_change_password"
         app:layout_constraintStart_toStartOf="parent"
