add class builder, actions, and add pose from library layouts

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/overlay_background"
     android:padding="24dp">
 
-<com.google.android.material.card.MaterialCardView
-android:id="@+id/card_change_password"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_gravity="center"
-app:cardCornerRadius="12dp"
-app:cardElevation="8dp"
-app:cardBackgroundColor="@android:color/white"
-android:padding="16dp">
+    <com.google.android.material.card.MaterialCardView
+    android:id="@+id/card_change_password"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="8dp"
+    app:cardBackgroundColor="@android:color/white"
+    android:padding="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,13 +27,14 @@ android:padding="16dp">
             android:layout_height="wrap_content"
             android:fontFamily="@font/urbanist_bold"
             android:text="Change Password"
-            android:textColor="#212121"
+            android:textColor="@color/black"
             android:textSize="18sp"
             android:paddingTop="16dp"
-            android:paddingLeft="16dp"
+            android:paddingStart="16dp"
             app:layout_constraintEnd_toStartOf="@+id/btn_close"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_close"
@@ -41,7 +43,7 @@ android:padding="16dp">
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:tint="#212121"
+            android:tint="@color/black"
             app:icon="@drawable/ic_close"
             app:iconPadding="0dp"
             app:layout_constraintEnd_toEndOf="parent"
