refactor layouts to use string resources and update text colors for consistency

--- a/app/src/main/res/layout/class_builder_actions.xml
+++ b/app/src/main/res/layout/class_builder_actions.xml
@@ -32,7 +32,7 @@
         android:layout_height="31dp"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/urbanist_bold"
-        android:text="Your Stretching Class"
+        android:text="@string/your_stretching_class"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="90 Minutes"
+        android:text="@string/_90_minutes"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
         android:textColor="@color/sub_titles_text"
@@ -86,7 +86,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/urbanist"
-                android:text="Add New Pose"
+                android:text="@string/add_new_pose"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_add_pose"
@@ -99,8 +100,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/urbanist"
-                android:text="Single pose"
-                android:textColor="#757575"
+                android:text="@string/single_pose"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/tv_add_pose_title"
@@ -141,7 +142,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="Add New Flow"
+                android:text="@string/add_new_flow"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:fontFamily="@font/urbanist"
@@ -154,10 +156,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Sequence of exercises"
+                android:text="@string/sequence_of_exercises"
                 android:textSize="14sp"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 app:layout_constraintTop_toBottomOf="@id/tv_add_flow_title"
                 app:layout_constraintStart_toStartOf="@id/tv_add_flow_title"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -170,7 +172,8 @@
         style="@style/Widget.Yogis.Button.Secondary"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:text="View Class Plan"
+        android:text="@string/view_class_plan"
+        android:textColor="@color/black"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintBottom_toTopOf="@+id/tv_back_main"
@@ -183,7 +186,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/back_to_main_menu"
-        android:textColor="@color/black"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/btn_view_plan"
         app:layout_constraintStart_toStartOf="parent"
