--- a/app/src/main/res/layout/password_changed.xml
+++ b/app/src/main/res/layout/password_changed.xml
@@ -34,10 +34,10 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/password_changed"
         android:textAlignment="center"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:fontFamily="@font/urbanist"
         android:text="@string/password_changed_subtitle"
         android:textAlignment="center"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
