--- a/app/src/main/res/layout/sign_up_prof_info.xml
+++ b/app/src/main/res/layout/sign_up_prof_info.xml
@@ -31,9 +31,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/professional_information"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btn_professional_back"
@@ -94,7 +94,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/already_have_an_account"
-        android:textColor="#212121"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_professional_login"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -108,7 +108,7 @@
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/login"
         android:textColor="@color/primary"
         android:textSize="14sp"
