--- a/app/src/main/res/layout/class_builder.xml
+++ b/app/src/main/res/layout/class_builder.xml
@@ -33,8 +33,8 @@
         android:layout_height="28dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/urbanist_bold"
-        android:text="New Class Builder"
-        android:textColor="#212121"
+        android:text="@string/new_class_builder"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,8 @@
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
-        android:hint="Enter Main Focus"
+        android:hint="@string/enter_main_focus"
+        android:textColorHint="@color/sub_titles_text"
         app:layout_constraintTop_toBottomOf="@id/tv_cb_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -66,7 +67,8 @@
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
-        android:hint="Enter Class Duration (Minutes)"
+        android:hint="@string/enter_class_duration_minutes"
+        android:textColorHint="@color/sub_titles_text"
         app:layout_constraintTop_toBottomOf="@id/til_focus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -84,7 +86,8 @@
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
-        android:hint="Select Class Level"
+        android:hint="@string/select_class_level"
+        android:textColorHint="@color/sub_titles_text"
         app:endIconMode="dropdown_menu"
         app:layout_constraintTop_toBottomOf="@id/til_duration"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +98,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingStart="16dp"
-            android:inputType="none"/>
+            android:inputType="none"
+            tools:ignore="RtlSymmetry" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -103,7 +107,7 @@
         style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:text="Start"
+        android:text="@string/start"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
@@ -116,10 +120,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Back to Main Menu"
+        android:text="@string/back_to_main_menu"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         app:layout_constraintTop_toBottomOf="@id/btn_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
