--- a/app/src/main/res/layout/class_builder_add_new_pose.xml
+++ b/app/src/main/res/layout/class_builder_add_new_pose.xml
@@ -112,7 +112,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:hint="@string/pose_name">
+                android:hint="@string/pose_name"
+                android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -126,7 +127,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="@string/pose_family">
+                android:hint="@string/pose_family"
+                android:textColorHint="@color/sub_titles_text">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -157,7 +160,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="@string/duration">
+                        android:hint="@string/duration"
+                        android:textColorHint="@color/sub_titles_text">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/et_duration"
@@ -185,7 +189,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="@string/repetitions">
+                        android:hint="@string/repetitions"
+                        android:textColorHint="@color/sub_titles_text">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/et_repetitions"
@@ -204,7 +209,8 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="12dp"
-                android:hint="Select Class Level"
+                android:hint="@string/select_class_level"
+                android:textColorHint="@color/sub_titles_text"
                 app:endIconMode="dropdown_menu"
                 app:layout_constraintTop_toBottomOf="@id/til_duration"
                 app:layout_constraintStart_toStartOf="parent"
@@ -224,7 +230,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
-                android:hint="@string/description">
+                android:hint="@string/description"
+                android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -240,7 +247,8 @@
                 android:layout_width="350dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
-                android:text="Upload / Take Photo"
+                android:text="@string/upload_take_photo"
+                android:textColor="@color/black"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.461"
@@ -255,7 +263,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:hint="@string/note">
+                android:hint="@string/note"
+                android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -290,7 +299,7 @@
         android:text="@string/back_to_main_menu"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         app:layout_constraintTop_toBottomOf="@id/btn_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
