--- a/app/src/main/res/layout/class_builder_add_pose.xml
+++ b/app/src/main/res/layout/class_builder_add_pose.xml
@@ -31,7 +31,7 @@
         android:layout_width="343dp"
         android:layout_height="28dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/add_pose"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -106,6 +106,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_card_mark"
+                android:importantForAccessibility="no"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -115,10 +116,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="View by Levels"
+                android:text="@string/view_by_levels"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_ap_view_by_levels"
                 app:layout_constraintStart_toEndOf="@id/ic_ap_view_by_levels"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -128,7 +130,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
-                app:tint="#757575"
+                app:tint="@color/sub_titles_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -156,6 +158,7 @@
                 android:id="@+id/ic_ap_view_by_types"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/ic_card_mark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -166,10 +169,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="View by Types"
+                android:text="@string/view_by_types"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 android:textSize="16sp"
-                android:fontFamily="@font/urbanist_bold"
+                android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_ap_view_by_types"
                 app:layout_constraintStart_toEndOf="@id/ic_ap_view_by_types"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -179,10 +183,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Body parts and muscles"
+                android:text="@string/body_parts_and_muscles"
                 android:textSize="14sp"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 app:layout_constraintTop_toBottomOf="@id/tv_ap_view_by_types_title"
                 app:layout_constraintStart_toStartOf="@id/tv_ap_view_by_types_title"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -192,7 +196,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
-                app:tint="#757575"
+                app:tint="@color/sub_titles_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -222,6 +226,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_card_mark"
+                android:importantForAccessibility="no"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -231,10 +236,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="All Poses"
+                android:text="@string/all_poses"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:fontFamily="@font/urbanist_bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_ap_all_poses"
                 app:layout_constraintStart_toEndOf="@id/ic_ap_all_poses"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -244,7 +250,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
-                app:tint="#757575"
+                app:tint="@color/sub_titles_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
