--- a/app/src/main/res/layout/create_new_password.xml
+++ b/app/src/main/res/layout/create_new_password.xml
@@ -8,7 +8,6 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- at exactly 60% down the screen -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
@@ -32,16 +31,15 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/create_new_password"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btn_cp_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Subtitle -->
     <TextView
         android:id="@+id/tv_cp_subtitle"
         android:layout_width="350dp"
@@ -49,14 +47,13 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/create_new_strig_subtitle"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         android:lineSpacingExtra="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_cp_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- New Password field -->
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Yogis.TextField.Outlined"
         android:id="@+id/til_new_password"
@@ -74,10 +71,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/new_password"
+            android:textColorHint="@color/sub_titles_text"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Confirm Password field -->
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.Yogis.TextField.Outlined"
         android:id="@+id/til_confirm_password"
@@ -95,10 +92,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password"
+            android:textColorHint="@color/sub_titles_text"
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Reset Password button -->
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.Yogis.Button.Primary"
         android:id="@+id/btn_cp_reset"
