--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -25,10 +25,11 @@
             android:id="@+id/tv_dialog_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/urbanist_bold"
-            android:text="Change Password"
+            android:fontFamily="@font/urbanist"
+            android:text="@string/change_password"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:paddingTop="16dp"
             android:paddingStart="16dp"
             app:layout_constraintEnd_toStartOf="@+id/btn_close"
@@ -55,7 +56,7 @@
             android:layout_width="340dp"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
-            android:hint="Current Password"
+            android:hint="@string/current_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_close">
@@ -73,7 +74,7 @@
             android:layout_width="340dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:hint="New Password"
+            android:hint="@string/new_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_current">
@@ -91,7 +92,7 @@
             android:layout_width="340dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:hint="Verify New Password"
+            android:hint="@string/verify_new_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/til_new">
@@ -109,7 +110,7 @@
             android:layout_width="340dp"
             android:layout_height="60dp"
             android:layout_marginTop="16dp"
-            android:text="Update Password"
+            android:text="@string/update_password"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
