--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -8,7 +8,6 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- at exactly 60% down the screen -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
@@ -32,9 +31,9 @@
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/forgot_password"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +48,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/forgot_password_subtitle"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         android:lineSpacingExtra="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_fp_title"
@@ -93,7 +92,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/remember_password"
-        android:textColor="#212121"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@id/tv_fp_login"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -107,7 +106,7 @@
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/login"
         android:textColor="@color/primary"
         android:textSize="14sp"
