--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,7 +9,6 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- at exactly 60% down the screen -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
@@ -33,9 +32,9 @@
         android:layout_width="319dp"
         android:layout_height="72dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/welcome_back_glad_to_see_you_again"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +87,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/forgot_password"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/til_password"
         app:layout_constraintEnd_toEndOf="@id/til_password"/>
@@ -112,7 +111,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/don_t_have_an_account"
-        android:textColor="#212121"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@id/tv_register_now"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -124,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_now"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:textColor="@color/primary"
         android:textSize="14sp"
         android:clickable="true"
