--- a/app/src/main/res/layout/main_logged_in.xml
+++ b/app/src/main/res/layout/main_logged_in.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/urbanist_bold"
         android:text="@string/how_can_we_help_you_today"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/class_builder"
-
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:fontFamily="@font/urbanist_bold"
@@ -80,7 +80,7 @@
                 android:text="@string/plan_your_next_class"
                 android:textSize="14sp"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 app:layout_constraintTop_toBottomOf="@id/tv_class_builder_title"
                 app:layout_constraintStart_toStartOf="@id/tv_class_builder_title"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -90,7 +90,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
-                app:tint="#757575"
+                app:tint="@color/sub_titles_text"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -132,6 +132,7 @@
                 android:text="@string/teaching_mode"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_pose_library"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/ic_pose_library" />
@@ -143,7 +144,7 @@
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/view_your_class_while_you_teach"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/tv_pose_library_title"
@@ -156,7 +157,7 @@
                 android:src="@drawable/ic_chevron_right"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="#757575" />
+                app:tint="@color/sub_titles_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -196,6 +197,7 @@
                 android:fontFamily="@font/urbanist_bold"
                 android:text="@string/pose_library"
                 android:textSize="16sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_teaching_mode"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +210,7 @@
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/view_amp_filter_as_you_like"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/tv_teaching_mode_title"
@@ -221,7 +223,7 @@
                 android:src="@drawable/ic_chevron_right"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="#757575" />
+                app:tint="@color/sub_titles_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -232,6 +234,7 @@
         android:layout_height="60dp"
         android:text="@string/view_my_profile"
         android:textAllCaps="false"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
