--- a/app/src/main/res/layout/otp_verification.xml
+++ b/app/src/main/res/layout/otp_verification.xml
@@ -8,7 +8,6 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <!-- at exactly 60% down the screen -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
@@ -32,9 +31,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/otp_verification"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btn_otp_back"
@@ -48,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/otp_sub_title"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         android:lineSpacingExtra="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_otp_title"
@@ -179,7 +178,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/didn_t_receive_code"
-        android:textColor="#212121"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_resend"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -193,7 +192,7 @@
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/resend"
         android:textColor="@color/primary"
         android:textSize="14sp"
