--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -48,7 +48,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:fontFamily="@font/urbanist"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/iv_profile_pic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -60,7 +60,7 @@
         android:text="@string/ashtanga_yoga_instructor"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -98,7 +98,8 @@
                 android:text="@string/professional_details"
                 android:textSize="16sp"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#212121"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_marginStart="8dp"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_professional"
                 app:layout_constraintStart_toEndOf="@id/ic_professional"
@@ -111,7 +112,7 @@
                 android:fontFamily="@font/urbanist"
                 android:text="@string/yoga"
                 android:textStyle="bold"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/urbanist"
+                android:textColor="@color/sub_titles_text"
                 android:text="@string/ashtanga"
                 android:textSize="14sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_yoga"
@@ -135,7 +137,7 @@
                 android:fontFamily="@font/urbanist"
                 android:text="@string/level"
                 android:textStyle="bold"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_yoga" />
@@ -146,6 +148,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/_2_years"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_level"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -185,6 +188,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/contact_details"
                 android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_contact"
                 android:layout_marginStart="8dp"
@@ -198,7 +203,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/ic_contact"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -209,6 +214,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/_972_547628936"
                 android:textSize="14sp"
+                android:textColor="@color/sub_titles_text"
                 android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_phone"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -220,7 +226,7 @@
                 android:text="@string/email"
                 android:textSize="14sp"
                 android:fontFamily="@font/urbanist"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_label_phone"
@@ -232,6 +238,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/example_gmail_com"
                 android:textSize="14sp"
+                android:textColor="@color/sub_titles_text"
                 android:fontFamily="@font/urbanist"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_email"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -272,6 +279,8 @@
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/personal_details"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_personal"
                 app:layout_constraintStart_toEndOf="@id/ic_personal" />
@@ -282,7 +291,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/date_of_birth"
-                android:textColor="#757575"
+                android:textColor="@color/sub_titles_text"
                 android:layout_marginTop="8dp"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -295,6 +304,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/urbanist"
                 android:text="@string/_12_jan_1995"
+                android:textColor="@color/sub_titles_text"
                 android:textSize="14sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/tv_label_dob"
                 app:layout_constraintEnd_toEndOf="parent" />
