--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -31,9 +31,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/hello_register_to_get_started"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +172,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/already_have_an_account"
-        android:textColor="#212121"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_sign_up_login"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -186,7 +186,7 @@
         android:layout_marginTop="20dp"
         android:clickable="true"
         android:focusable="true"
-        android:fontFamily="@font/urbanist_bold"
+        android:fontFamily="@font/urbanist"
         android:text="@string/login"
         android:textColor="@color/primary"
         android:textSize="14sp"
