--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="92dp"
         android:fontFamily="@font/urbanist_bold"
         android:text="@string/welcome_to"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/yogis"
-        android:textColor="#212121"
+        android:textColor="@color/black"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/urbanist"
         android:text="@string/yoga_instructors_helper"
-        android:textColor="#757575"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
