--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="stroke_text_field">#E8ECF4</color>
     <color name="stroke_button">#E8ECF4</color>
     <color name="overlay_background">#808A8A8A</color>
+    <color name="chip_bg">#EDEDED</color>
 </resources>
